finish site basically

--- a/404.html
+++ b/404.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Icons/globe.png" type="image/x-icon">
-    <title>404 Not Found</title>
+    <title>daymian . 404</title>
 
     <style>
+        @import url(/transitions.css);
         body {
             margin: 0;
             padding: 0;
@@ -90,6 +91,7 @@
             }
         });
     </script>
+    <script src="scripts/transition.js" defer></script>
 </body>
 
 </html>
