--- a/about/hobbies/index.html
+++ b/about/hobbies/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> daymian // hobbies</title>
+    <title> daymian . hobbies</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <div class="gradient-bg">
@@ -33,9 +33,9 @@
     <div id="sidebar" class="sidebar">
         <button id="closeSidebar" class="close-btn pointer-hover">×</button>
         <a href="/index.html" class="sidebar-link pointer-hover">Home</a>
-        <a href="/about/index.html" class="here sidebar-link pointer-hover">About Me</a>
-        <a href="/index.html#projects" class="sidebar-link pointer-hover">Projects</a>
-        <a href="/index.html#contact" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/about/index.html" class="sidebar-link pointer-hover">About Me</a>
+        <a href="/projects/index.html" class=" sidebar-link pointer-hover">Projects</a>
+        <a href="index.html" class=" sidebar-link pointer-hover">Contact </a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
@@ -119,14 +119,15 @@
             <p>Email: business@daymian.xyz</p>
         </div>
         <div class="footerRow">
-            <h3 class="light-bg-hover">Portfolio</h3>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+            <a href="/projects/index.html" style="color: #daffd6;"><h3 class="light-bg-hover">Portfolio</h3></a>
+            <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#resume" target="_blank">Resume</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#projects" target="_blank">Projects</a></p>
         </div>
         <div class="footerRow">
-            <h3 class="light-bg-hover">About Me</h3>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+            <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
+            <p class="portfolioLink"><a class="pointer-hover" href="#top">Awards & Achievements</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/hobbies/index.html">Hobbies</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/psp/index.html">Post Secondary Plan</a></p>
         </div>
         <div class="footerRow socials">
             <a class="pointer-hover" href="https://www.daymian.xyz" target="_blank"><img class="social-icon"
@@ -137,14 +138,15 @@
                     src="/imgs/icons/github2.svg"></a>
             <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d" target="_blank"><img
                     class="social-icon" src="/imgs/icons/upwork.svg"></a>
-            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img
-                    class="social-icon" src="/imgs/icons/linkedin.svg"></a>
+            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/linkedin.svg"></a>
         </div>
     </div>
 </div>
     <script src="/scripts/cursor.js"></script>
     <script src="/scripts/sidebar.js"></script>
     <script src="/scripts/orbs.js"></script>
+    <script src="scripts/transition.js" defer></script>
 </body>
 
 </html>
