--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="daymian's portfolio site. A web developer with a passion for crafting interactive, visually engaging web experiences.">
     <link rel="icon" type="image/png" href="/imgs/djCrownOfThorns.png">
-    <title>daymian // home</title>
+    <title>daymian . home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/transitions.css">
 </head>
 
-<body>
+<body class="no-transition">
     <div id="sidebar" class="sidebar">
         <button id="closeSidebar" class="close-btn pointer-hover">×</button>
         <a href="/index.html" class="here sidebar-link pointer-hover">Home<br> <span>you're already here!</span></a>
@@ -78,8 +79,8 @@
                             <h1 class="light-bg-hover">Site Updates</h1>
                             <p class="version">alpha</p>
                         </div>
-                        <p>Still in alpha, my current site is <a class="currentSite pointer-hover"
-                                href="https://www.daymian.xyz" target="_blank">here</a>
+                        <p>What you are seeing is the first edition of the site! If there are any updates, I'll put them here <a class="currentSite pointer-hover"
+                                href="" target="_blank">here</a>
                         </p>
                     </div>
                 </div>
@@ -122,6 +123,7 @@
     <script src="/scripts/age.js"></script>
     <script src="/scripts/greetings.js"></script>
     <script src="/scripts/sidebar.js"></script>
+    <script src="scripts/transition.js" defer></script>
 </body>
 
 </html>
