--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>daymian . portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,7 +15,7 @@
         <a href="/about/index.html" class="sidebar-link pointer-hover">About Me</a>
         <a href="/projects/index.html" class=" here sidebar-link pointer-hover">Projects<br> <span>you're already
                 here!</span></a>
-        <a href="/index.html#contact" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/contact/index.html" class="sidebar-link pointer-hover">Contact</a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
@@ -40,8 +40,8 @@
                 <img src="/imgs/sites/flowHome.png">
                 <img src="/imgs/sites/flowPage.png">
                 <div class="buttonGroup">
-                    <a class="button flow pointer-hover light-bg-hover">Learn More</a>
-                    <a class="button flow pointer-hover light-bg-hover" href="https://flow-daymian.netlify.app"
+                    <a class="button flow pointer-hover light-bg-hover" href="flow/index.html">Learn More</a>
+                    <a class="button flow pointer-hover light-bg-hover" href="https://daymian-flow.netlify.app"
                         target="_blank">Visit</a>
                 </div>
             </div>
@@ -49,8 +49,8 @@
                 <img src="/imgs/sites/driftHome.png">
                 <img src="/imgs/sites/driftPage.png">
                 <div class="buttonGroup">
-                    <a class="button drift pointer-hover light-bg-hover">Learn More</a>
-                    <a class="button drift pointer-hover light-bg-hover" href="https://drift.daymian.xyz"
+                    <a class="button drift pointer-hover light-bg-hover" href="drift/index.html">Learn More</a>
+                    <a class="button drift pointer-hover light-bg-hover" href="https://driftcomp.netlify.app"
                         target="_blank">Visit</a>
                 </div>
             </div>
@@ -58,8 +58,8 @@
                 <img src="/imgs/sites/cssHome.png">
                 <img src="/imgs/sites/cssPage.png">
                 <div class="buttonGroup">
-                    <a class="button css pointer-hover light-bg-hover">Learn More</a>
-                    <a class="button css pointer-hover light-bg-hover" href="https://css.daymian.xyz"
+                    <a class="button css pointer-hover light-bg-hover" href="css/index.html" >Learn More</a>
+                    <a class="button css pointer-hover light-bg-hover" href="https://melodious-lamington-f2d51f.netlify.app"
                         target="_blank">Visit</a>
                 </div>
             </div>
@@ -112,6 +112,7 @@
     <script src="/scripts/cursor.js"></script>
     <script src="/scripts/sidebar.js"></script>
     <script src="/scripts/image-popup.js"></script>
+    <script src="scripts/transition.js" defer></script>
 </body>
 
 </html>
