--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="About Daymian J. Madrigal Vasquez - A web developer with a passion for crafting interactive, visually engaging web experiences.">
     <link rel="icon" type="image/png" href="/imgs/CrownOfThorns.png">
-    <title>daymian // about</title>
+    <title>daymian . about</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,10 +16,10 @@
     <div id="sidebar" class="sidebar">
         <button id="closeSidebar" class="close-btn pointer-hover">×</button>
         <a href="/index.html" class="sidebar-link pointer-hover">Home</a>
-        <a href="/about/index.html" class="here sidebar-link pointer-hover">About Me<br> <span>you're already
-                here!</span></a>
-        <a href="/index.html#projects" class="sidebar-link pointer-hover">Projects</a>
-        <a href="/index.html#contact" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/about/index.html" class="here sidebar-link pointer-hover">About Me <br> <span>you're already
+            here!</span></a>
+        <a href="/projects/index.html" class=" sidebar-link pointer-hover">Projects</a>
+        <a href="index.html" class="sidebar-link pointer-hover">Contact</a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
@@ -70,9 +70,9 @@
             <p>Email: business@daymian.xyz</p>
         </div>
         <div class="footerRow">
-            <h3 class="light-bg-hover">Portfolio</h3>
-            <p class="portfolioLink"><a class="pointer-hover" href="/about/index.html" target="_blank">About ME</a></p>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+            <a href="/projects/index.html" style="color: #daffd6;"><h3 class="light-bg-hover">Portfolio</h3></a>
+            <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#resume" target="_blank">Resume</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#projects" target="_blank">Projects</a></p>
         </div>
         <div class="footerRow">
             <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
@@ -89,14 +89,15 @@
                     src="/imgs/icons/github2.svg"></a>
             <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d" target="_blank"><img
                     class="social-icon" src="/imgs/icons/upwork.svg"></a>
-            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img
-                    class="social-icon" src="/imgs/icons/linkedin.svg"></a>
+            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/linkedin.svg"></a>
         </div>
     </div>
 
     <script src="/scripts/sidebar.js"></script>
     <script src="/scripts/cursor.js"></script>
     <script src="/scripts/age.js"></script>
+    <script src="scripts/transition.js" defer></script>
 </body>
 
 </html>
