--- a/about/psp/index.html
+++ b/about/psp/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>daymian // post secondary plan</title>
+    <title>daymian . post secondary plan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,8 +13,8 @@
         <button id="closeSidebar" class="close-btn pointer-hover">×</button>
         <a href="/index.html" class="sidebar-link pointer-hover">Home</a>
         <a href="/about/index.html" class="sidebar-link pointer-hover">About Me</a>
-        <a href="/index.html#projects" class="sidebar-link pointer-hover">Projects</a>
-        <a href="/index.html#contact" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/projects/index.html" class=" sidebar-link pointer-hover">Projects</a>
+        <a href="index.html" class="sidebar-link pointer-hover">Contact </a>
     </div>
 
     <header>
@@ -49,9 +49,9 @@
             <p>Email: business@daymian.xyz</p>
         </div>
         <div class="footerRow">
-            <h3 class="light-bg-hover">Portfolio</h3>
-            <p class="portfolioLink"><a class="pointer-hover" href="/about/index.html" target="_blank">About ME</a></p>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+            <a href="/projects/index.html" style="color: #daffd6;"><h3 class="light-bg-hover">Portfolio</h3></a>
+            <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#resume" target="_blank">Resume</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#projects" target="_blank">Projects</a></p>
         </div>
         <div class="footerRow">
             <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
@@ -68,13 +68,14 @@
                     src="/imgs/icons/github2.svg"></a>
             <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d" target="_blank"><img
                     class="social-icon" src="/imgs/icons/upwork.svg"></a>
-            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img
-                    class="social-icon" src="/imgs/icons/linkedin.svg"></a>
+            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/linkedin.svg"></a>
         </div>
     </div>
 
     <script src="/scripts/cursor.js"></script>
     <script src="/scripts/sidebar.js"></script>
+    <script src="scripts/transition.js" defer></script>
 </body>
 
 </html>
