--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="About Daymian J. Madrigal Vasquez - A web developer with a passion for crafting interactive, visually engaging web experiences.">
-    <link rel="icon" type="image/png" href="/imgs/CrownOfThorns.png">
+    <link rel="icon" type="image/png" href="/imgs/favicon.png">
     <title>daymian . about</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,35 +19,33 @@
         <a href="/about/index.html" class="here sidebar-link pointer-hover">About Me <br> <span>you're already
             here!</span></a>
         <a href="/projects/index.html" class=" sidebar-link pointer-hover">Projects</a>
-        <a href="index.html" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/contact/index.html" class="sidebar-link pointer-hover">Contact</a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
     <div class="mainContent">
         <img class="profilePic" src="/imgs/daymian.jpg" alt="Daymian J. Madrigal Vasquez">
         <div class="aboutMeText">
-            <h1>Who Am I? Glad You Asked!</h1>
-            <p>Web Wizard | Turning Coffee & Code into Cool Websites</p>
-            <p>Hey there! I'm Daymian J. Madrigal Vasquez, a <span id="age"></span>-year-old web developer from sunny California. I take
-                boring lines of code and turn them into sleek, interactive, and downright awesome websites.</p>
-            <p>Need a portfolio that wows, a landing page that converts, or a web site that just works? I’ve got you
-                covered with clean code, creative design, and a sprinkle of magic.</p>
-            <h3>🔧 Skills That Pay the "Bills":</h3>
+            <h1>Who Am I? Glad You Asked! 😊</h1>
+            <p>Web Wizard | Turning Coffee & Code into Cool Websites 🌐</p>
+            <h1>About Me</h1>
+            <p>Hey there! 👋 I'm Daymian J. Madrigal Vasquez, a <span id="age"></span>-year-old web developer from sunny California. I take
+                boring lines of code and turn them into sleek, interactive, and downright awesome websites. 🚀</p>
+            <p>Need a portfolio that wows? Maybe a landing page that converts, or a website that just works? I’ve got you
+                covered with clean code, creative design, and a sprinkle of magic. 🪄</p>
+            <h3>Skills: 💡</h3>
             <ul>
-                <li>HTML, CSS, JavaScript (the holy trinity of web dev)</li>
-                <li>Responsive designs that look good on any screen</li>
-                <li>Animations that make your site pop</li>
+                <li>HTML, CSS, JavaScript 🖥️</li>
+                <li>Responsive design 📱</li>
+                <li>Animations 🎥</li>
             </ul>
-            <h3>💡 Why Work With Me?</h3>
+            <h3>Why Choose Me? 🤔</h3>
             <ul>
-                <li>Clear and friendly communication (no tech jargon, promise!)</li>
-                <li>Fast turnarounds without cutting corners</li>
-                <li>Pixel-perfect designs that don’t just look good—they feel good</li>
-                <li>Focus on speed, accessibility, and user experience</li>
+                <li>Clear communication 🗣️</li>
+                <li>Fast, quality work ⚡</li>
+                <li>Focus on user experience 👨‍💻</li>
             </ul>
-            <p>Whether you’re starting fresh or need a pro to jump in and save the day, I’m here to help. Let’s build
-                something awesome together!</p>
-            <p>Ready to make your idea a reality? Let’s chat! 🚀</p>
+            <p>Let’s build something great together! 🌟</p>
         </div>
     </div>
     <div class="hover-buttonsBackground">
