--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="daymian's portfolio site. A web developer with a passion for crafting interactive, visually engaging web experiences.">
-    <link rel="icon" type="image/png" href="/imgs/djCrownOfThorns.png">
+    <link rel="icon" type="image/png" href="/imgs/favicon.png">
     <title>daymian . home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles/transitions.css">
@@ -77,10 +77,10 @@
                     <div class="siteVersionText">
                         <div class="siteVersionHeader">
                             <h1 class="light-bg-hover">Site Updates</h1>
-                            <p class="version">alpha</p>
+                            <p class="version">Version 1.0</p>
                         </div>
                         <p>What you are seeing is the first edition of the site! If there are any updates, I'll put them here <a class="currentSite pointer-hover"
-                                href="" target="_blank">here</a>
+                                href="/updates/index.html" target="_blank">here</a>
                         </p>
                     </div>
                 </div>
