--- a/projects/flow/index.html
+++ b/projects/flow/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>daymian . flow site</title>
     <link rel="stylesheet" href="/projects/sitestyles.css">
+    <link rel="icon" type="image/png" href="/imgs/favicon.png">
 </head>
 
 <body>
