--- a/about/hobbies/index.html
+++ b/about/hobbies/index.html
@@ -36,7 +36,7 @@
         <a href="/index.html" class="sidebar-link pointer-hover">Home</a>
         <a href="/about/index.html" class="sidebar-link pointer-hover">About Me</a>
         <a href="/projects/index.html" class=" sidebar-link pointer-hover">Projects</a>
-        <a href="index.html" class=" sidebar-link pointer-hover">Contact </a>
+        <a href="/contact/index.html" class="sidebar-link pointer-hover">Contact</a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
@@ -63,7 +63,7 @@
                 iterating, and having a little too much fun while I’m at it.</p>
         </div>
         <div class="oneImg">
-            <img class="hobbyImg" src="/imgs/PLACEHOLDER.png" alt="Gaming Image">
+            <img class="hobbyImg" src="/imgs/icons/games.jpg" alt="Gaming Image" style="width: 1500px; height: auto; margin-left: 10em; margin-top: 10em; border-radius: 1em;">
         </div>
     </div>
     <div class="hobbyTwo hobbyOverall">
@@ -90,7 +90,7 @@
             </ul>
         </div>
         <div class="twoImg">
-            <img class="hobbyImg" src="/imgs/PLACEHOLDER.png" alt="Coding Image">
+            <img class="hobbyImg" src="/imgs/icons/coding.gif" alt="Coding Image" style="width: 1500px; height: auto; margin-left: 10em; margin-top: 10em; border-radius: 1em;">
         </div>
     </div>
     <div class="hobbyOne hobbyOverall">
@@ -109,7 +109,7 @@
                 if its not what is "the norm"</p>
         </div>
         <div class="oneImg">
-            <img class="hobbyImg" src="/imgs/PLACEHOLDER.png" alt="Music Image">
+            <img class="hobbyImg" src="/imgs/icons/music.jpg" alt="Music Image">
         </div>
     </div>
 
