--- a/projects/flow/index.html
+++ b/projects/flow/index.html
@@ -15,7 +15,7 @@
         <a href="/index.html" class="sidebar-link pointer-hover">Home</a>
         <a href="/about/index.html" class="sidebar-link pointer-hover">About Me</a>
         <a href="/projects/index.html" class=" sidebar-link pointer-hover">Projects</a>
-        <a href="index.html" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/contact/index.html" class="sidebar-link pointer-hover">Contact</a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
